# findpapers

./: .env.sample  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  REFACTORING_PLAN_v2.md  _cleanup_notes.md  _ignore_test_refact.py  pyproject.toml  query-build-plan.md
.github/: codeql-config.yml  copilot-instructions.md
.github/prompts/: checkandcommit.prompt.md  checkcommitpush.prompt.md
.github/workflows/: codeql-analysis.yml  labels_sync.yml  lint.yml  pr_labeler.yml  publish.yml  release-drafter.yml  smoke_tests.yml  test.yml
docs/: api-reference.md  configuration.md  databases.md  download.md  enrich.md  export-formats.md  fetch-by-doi.md  get.md  getting-started.md  persistence-formats.md  query-syntax.md  save-load.md  search-databases.md  search.md  snowball.md
findpapers/: __init__.py  api.py  cli.py  engine.py  exceptions.py
findpapers/connectors/: __init__.py  arxiv.py  citation_base.py  connector_base.py  crossref.py  doi_lookup_base.py  ieee.py  openalex.py  pubmed.py  scopus.py  search_base.py  semantic_scholar.py  web_scraping.py
findpapers/core/: author.py  citation_graph.py  paper.py  publication.py  query.py  search.py  search_result.py  source.py  source_type.py
findpapers/models/: query.py
findpapers/query/: builder.py  parser.py  propagator.py  validator.py
findpapers/query/builders/: __init__.py  arxiv.py  biorxiv.py  common.py  ieee.py  medrxiv.py  openalex.py  pubmed.py  rxiv.py  scopus.py  semantic_scholar.py
findpapers/runners/: base_runner.py  discovery_runner.py  doi_lookup_runner.py  download_runner.py  enrichment_runner.py  get_runner.py  search_runner.py  snowball_runner.py
findpapers/searchers/: arxiv.py  arxiv_searcher.py  base.py  biorxiv.py  ieee.py  medrxiv.py  openalex.py  pubmed.py  rxiv.py  rxiv_searcher.py  scopus.py  semantic_scholar.py  webofscience_searcher.py
findpapers/tools/: search_runner_tool.py
findpapers/utils/: crossref.py  dedup.py  download.py  enrichment.py  export.py  http_headers.py  logging_config.py  merge.py  metadata_parser.py  normalization.py  parallel.py  persistence.py  predatory.py  progress.py  requests_util.py
findpapers_0/models/: query.py
tests/: conftest.py
tests/data/: README.md  collect_all_samples.py  collect_citation_samples.py
tests/data/arxiv/: collection_metadata.json  sample_response.xml
tests/data/citation_samples/: 10.1016_j.apenergy.2023.121323.json  10.3758_s13428-022-02028-7.json  collection_metadata.json
tests/data/crossref/: collect_sample.py  collection_metadata.json  (+1 more)
tests/integration/: test_smoke.py
tests/unit/: test_api.py  test_engine.py  test_query.py
tests_0/unit/: test_query.py
typings/pytest/: __init__.pyi
(+323 files in other folders)
