[tool.poetry]
name = "Findpapers"
version = "0.6.7"
description = "Findpapers is an application that helps researchers who are looking for references for their work."
authors = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
maintainers = ["Jonatas Grosman <jonatasgrosman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jonatasgrosman/findpapers"
repository = "https://github.com/jonatasgrosman/findpapers"
documentation = "https://github.com/jonatasgrosman/findpapers"
keywords = ["academic", "academic publications", "academic publishing", "arxiv", "bibtex", "collect papers", "crawler", "crossref", "ieee", "openalex", "paper", "papers", "pubmed", "research", "semantic scholar", "scientific papers", "scientific publications", "scientific publishing", "scopus", "scraper", "systematic mapping", "systematic review"]

[tool.poetry.dependencies]
python = "^3.11"
lxml = ">=4.5.2,<7"
requests = "^2.32.0"
curl-cffi = ">=0.7.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-randomly = "^4.0.0"
coverage = {version = "^7.13.0", extras = ["toml"]}
types-requests = "^2.32.0"
lxml-stubs = "^0.5.0"
types-tqdm = "^4.67.0"
ruff = "^0.15.0"
mypy = "^1.19.1"

[tool.poetry.urls]
issues = "https://github.com/jonatasgrosman/findpapers/issues"

[tool.pytest.ini_options]
junit_family = "xunit2"
minversion = "6.0"
addopts = "-ra -q -m 'not integration'"
testpaths = [
    "tests"
]
markers = [
    "integration: live integration/smoke tests that hit real external APIs",
]

[tool.coverage.run]
source = ["findpapers"]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*", "typings.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# I = isort-compatible import sorting (replaces standalone isort).
select = ["E", "F", "W", "I", "B", "SIM", "PT", "UP", "C4", "RUF"]
# E501 is handled by ruff format, so we ignore it in the linter.
# RUF002/RUF003: allow EN DASH (–) in docstrings/comments — intentional typography.
ignore = ["E501", "RUF002", "RUF003"]

[tool.ruff.format]
# Replaces standalone black.
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

